some change done in js file

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <div>
-        <input id="name" type="text" placeholder="Enter Name">
-        <input id="email" type="email" placeholder="Enter email">
-        <input id="number" type="number" placeholder="Enter Phone Number">
+        <input id="name" type="text" placeholder="Enter Name...">
+        <input id="email" type="email" placeholder="Enter email...">
+        <input id="number" type="number" placeholder="Enter Phone Number...">
         <button id="add_btn">ADD</button>
     </div>
     <table id="table">
